"""Observer Class allows for Observer Pattern"""


class Observer:
    """Observer Class"""
    def update(self) -> None:
        """update function"""
        pass
